# rust-practice

./: Cargo.toml  Readme.md
package/async-chat/: Cargo.toml
package/async-chat/src/: lib.rs  utils.rs
package/bitcask/: Cargo.toml
package/bitcask/src/: data_file.rs  lib.rs  mini_bitcask.rs
package/calculator/src/: lib.rs
package/db/: Cargo.toml  database.sql
package/db/src/: main.rs
package/gap-buffer/src/: lib.rs
package/http/: Cargo.toml
package/http/public/: 404.html  health.html  index.html
package/http/src/: handler.rs  http_request.rs  http_response.rs  main.rs  router.rs  server.rs
package/json-macro/src/: lib.rs
package/mandel-draw/: Cargo.toml
package/mandel-draw/src/: main.rs
package/mvcc/: Cargo.toml
package/mvcc/src/: lib.rs
package/snake/: Cargo.toml
package/snake/src/: draw.rs  game.rs  main.rs  snake.rs
package/tcp/: Cargo.toml
package/timer-future/: Cargo.toml
package/timer-future/src/: lib.rs  main.rs
package/tutor-service/: .env  Cargo.toml  database.sql
package/tutor-service/src/: errors.rs  main.rs  routes.rs
package/tutor-service/src/dbaccess/: course.rs  tutor.rs
package/tutor-service/src/handlers/: course.rs  general.rs  tutor.rs
package/tutor-service/src/models/: course.rs  tutor.rs
package/web/: Cargo.toml
package/web/examples/: example1.rs  example2.rs  example3.rs  example4.rs  example5.rs  example6.rs  example7.rs
package/web/src/: handles.rs  main.rs  routes.rs  state.rs
