[workspace]
members = [
    "package/hello-world",
    "package/snake",
    "package/bitcask",
    "package/calculator",
    "package/mvcc",
    "package/tcp",
    "package/http",
    "package/web",
    "package/db",
    "package/tutor-service",
    "package/async-chat",
    "package/timer-future",
    "package/mandel-draw",
    "package/json-macro",
    "package/gap-buffer",
]

resolver = "2"
