[package]
name = "async-chat"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = { version = "1", features = ["unstable"] }
tokio = { version = "1", features = ["sync"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"


[[bin]]
name = "client"

[[bin]]
name = "server"